--- a/index.html
+++ b/index.html
@@ -15,29 +15,30 @@ duV)==&#39;object&#39;YmoduV.exports?WoduV.exportUf(T:(r.h=f(T})(Function(&#39;r
 rn(Sis)&#39;)(),(hzh=R,m,a,r,t,$,_z{r=Rzs.repQP/[&#38;&#60;&#62;&#34;&#39;]/g,U&#62;\`&#38;#Ms.charCoqA
 t(0)};\`),$=(e,bz(b=e.repQP/^(\\s*)([/][/].*|[/][*][^]*?[*][/])/,(_,w,c
 z(Lr(w)+&#39;Kc&#62;&#39;+r(c).repQP/\\x40\\w+/g,U&#62;\`Kd&#62;MsJ\`)+&#39;&#60;/span&#62;&#39;,&#39;&#39;T)==e?(U
-b):$(b),t=&#39;&#39;,W=/^(\\s*)(\\/(\\\\.|.)+?\\/[imgyu]*H($RT)Y(LG[1DT}Kr&#62;MrW[
-2B@DT,_=[];whilXW=/\\b(?:(break|catch|cQss|const|contZue|qfault|do|else
-|fZally|for|from|function|if|import|Vt|static|super|switch|Sis|try|var|
-whiV|wiS9case|qVte|export|extends|Z(?:stanceof)?|return|of|Srow|typeof|
-void|yieldT9\\d+(?:\\.\\d*)?(?:[eE][-+]?\\d+)?|0x[\\da-fA-F]+|0o@-7]+|0
-b@1]+|true|false|null|unqfZed|NaN|InfZityT\\b9([&#34;&#39;])(?:\\\\[^]|.)*?\\5)
-9[.](?![.][.])|[     )\\]}])9[.][.][.]|[([{;,?:]   |=&#62;)9-         -|[+]
-[+]|Y|[|][|]9?:&#60;     &#60;|&#62;&#62;&#62;?|[-+\\/*%&#38;|^&#60;&#62;])=?|~|   [!=]    =?=?)9    [$
-\\w]+?(?=\\s*[(]     T9\`H($RT)YW[7-1]!=&#39;}&#39;||a!=   1Tm     [10]Y!    ((
-d,m,kz{L&#39;Ks&#62;&#39;;wh     ilXW=/\\\\.9\`)9\\MHRTY(!m[   1]|    |!d++TLrR.sli
-P0,m.ZqxT,Us.sli     Pm.Zqx+m@D),Lm[2]?\`Kp&#62;\\M&#60;   /sp    an&#62;Ki&#62;Mk=hR,0
-,1),Uk[1],k@]JKp             &#62;J\`:rW@]);L\`Mm?rR   .sliP0         ,k=m.
-Zqx+m@D),Us.sliP             kT:rR,U&#39;&#39;)J\`})(0)|   9Lm[1]         Y(_@]
-==&#39;.&#39;||m[1]!==&#39;q     fault   &#39;Y/^\\s*:    /.test   R.sliPm.Zqx+m@    DT
-)?rR.sliP0,m.Zqx     +m@DT   :G.ZqxT}K    M&#39;_k_v   s_ppof&#39;[m.ZqxO    fW
-@],1)]}&#62;MrW@B.Zq     x+m@D   T,_   =m,    (aYW[7   -1]    ==&#39;}&#39;Y     a-
--||m[7]==&#39;{&#39;Ya++     T,W[7   +1]   ||m             [7]    ||m[2]    )YW
-=/^(\\s*)(\\/(\\     \\.|.   )+?   \\/             [imgyu         ]*H($
-RT)Y(LG[1DT}Kr&#62;MrW[2B@DT;return(aYm?[t+rR.sliP0,m.ZqxT,s.sliPm.Zqx+m@D)
-]:t+rRT})z)=&#62;qdeZinY&#38;&#38;Xe(W(mVleUs=T))SthR(sQlaPcXM\${Lt+=K&#60;span\\x20cQs
-UJ}&#60;/span&#62;H)/.execG\`MrR.sliP0,mD].VngSB])J\`,Us.sliPm@[09|(`</span><span class=p>[</span><span class=s>&#39;replace&#39;</span>
-<span class=p>]</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>&#39;&#39;</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>of</span><span class=s>`9@BDGHJKLMPQRSTUVWXYZqz`</span><span class=p>)</span><span class=k>with</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>c<span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=f>join</span>
-<span class=p>(</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span>                    <span class=c>/* (C) 2015 TSUYUSATO Kitsune */</span>
+b):$(b),t=&#39;&#39;,W=/^(\\s*)(\\/(\\[(H*?\\]|H+?\\/[imgyu]*G($RT)Y(L\`MDB1@T}
+Kr&#62;MrW[2])J\`86T,_=[];whilXW=/\\b3(break|catch|cQss|con3st|tZue)|qfault
+|do|else|fZally|for|from|function|if|import|Vt|static|super|switch|Sis|
+try|var|whiV|wiS|(case|qVte|export|extends|Z3stanceof)?|return|of|Srow|
+typeof|void|yieldT|(\\d+3\\.\\d*)?3[eE][-+]?\\d+)?|0x[\\da-fA-F]+|0o[0-
+7]+|0b[01]+|true|false|null|unqfZed|NaN|InfZityT\\b|(([&#34;&#39;])3\\\\[^]|.)*
+?\\5)|([.](?![.]     [.])|[)\\]}])|(\\.\\.\\.|[(   [{;,?:         ]|=&#62;)
+|(--|[+][+]|Y|[|     ][|]|3&#60;&#60;|&#62;&#62;&#62;?|[-+\\/*%&#38;|^&#60;&#62;   ])=?    |~|[!=    ]=
+?=?)|([$\\w]+?(?     =\\s*[(]T|(\`G($RT)YW[7-1]!   =&#39;}     &#39;||a!=    1T
+B10]Y!((d,m,kz{L     &#39;Ks&#62;&#39;;whilX(12,m=/\\\\.|(\`   )|(    \\MGRTY(!B1]|
+|!d++TLDm.ZqxT8m     .Zqx+6),LB2]?\`Kp&#62;\\M&#60;/span   &#62;Ki    &#62;Mk=hR,0,1),U
+k[1],k[0]JKp&#62;J\`             :rW[0]);L\`Mm?Dk=m.   Zqx+6)         8kT:r
+R,U&#39;&#39;)J\`})(0)||             (Us.sliPm.Zqx+6),LB   1]Y_[0         ]==&#39;.
+&#39;Y(/^\\s*\\(/.te     stR)?   W[9]=B0],    B1]=B2   ]=&#39;&#39;):true)||B    1]
+!==&#39;qfault&#39;Y/^\\     s*:/.   testR)?rW    .Zput.   sliP0,m.Zqx+6)    ,1
+):\`MrW.Zput.sli     P0,m.   Zqx   T}K    M&#39;_k_v   s_p    pof&#39;[m     .Z
+qxOfW[0],1)]}&#62;Mr     W[0])   J\`   ),_             =m,    (aYW[7    -1]
+==&#39;}&#39;Ya--||B7]==     &#39;{&#39;Ya   ++T   ,W[             7+1]||         B7]||
+B2])YW=/^(\\s*)(\\/([\\[](H*?[\\]]|H+?\\/[imgyu]*G($RT)Y(L\`MDB1@T}Kr&#62;M
+rW[2])J\`86T;return(aYm?[t+Dm.ZqxT,s.sliPm.Zqx+6)]:t+rRT})z)=&#62;qdeZinY&#38;&#38;
+Xe(W(mVleUs=T))SthR(sQlaPcXM\${Lt+=K&#60;span\\x20cQsUJ}&#60;/span&#62;H\\\\.|.)G)/
+.execDrR.sliP0,Bm[@].VngS8,Us.sliP6B0@3(?:`</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>&#39;&#39;</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>of</span><span class=s>
+`368@BDGHJKLMPQRSTUVWXYZqz`</span><span class=p>)</span><span class=k>with</span><span class=p>(</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>c<span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=f>join</span><span class=p>(</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>//</span>
+<span class=c>/* (C)2015 TSUYUSATO Kitsune */</span>
 </code></pre>
     </header>
     <main>
@@ -64,7 +65,7 @@ UJ}&#60;/span&#62;H)/.execG\`MrR.sliP0,mD].VngSB])J\`,Us.sliPm@[09|(`</span><spa
 console<span class=p>.</span><span class=f>log</span><span class=p>(</span><span class=f>h</span><span class=p>(</span><span class=s>&#39;1 + 2&#39;</span><span class=p>)</span><span class=p>)</span>
 <span class=c>//=&#62; &#39;&#60;span class=v&#62;1&#60;/span&#62; &#60;span class=o&#62;+&#60;/span&#62; &#60;span class=v&#62;2&#60;/span&#62;&#39;)</span></code></pre>
         <p>In Browser, you add <code>&lt;script&gt;</code> tag to load h.js and put this script into the tail of <code>&lt;body&gt;</code>:</p>
-        <pre><code class="h-js language-javascript">Array<span class=p>.</span>from<span class=p>(</span>document<span class=p>.</span><span class=f>querySelectorAll</span><span class=p>(</span><span class=s>&#39;pre.h-js code&#39;</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>forEach</span><span class=p>(</span><span class=p>(</span>code<span class=p>)</span> <span class=p>=&#62;</span> <span class=p>{</span>
+        <pre><code class="h-js language-javascript">Array<span class=p>.</span><span class=f>from</span><span class=p>(</span>document<span class=p>.</span><span class=f>querySelectorAll</span><span class=p>(</span><span class=s>&#39;pre.h-js code&#39;</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>forEach</span><span class=p>(</span><span class=p>(</span>code<span class=p>)</span> <span class=p>=&#62;</span> <span class=p>{</span>
   code<span class=p>.</span>innerHTML <span class=o>=</span> <span class=f>h</span><span class=p>(</span>code<span class=p>.</span>textContent<span class=p>)</span>
 <span class=p>}</span><span class=p>)</span></code></pre>
         <h2>API</h2>
