--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ z(Lr(w)+&#39;Kc&#62;&#39;+r(c).repQP/\\x40\\w+/g,U&#62;\`Kd&#62;MsJ\`)+&#39;&#60
 b):$(b),t=&#39;&#39;,W=/^(\\s*)(\\/(\\[(H*?\\]|H+?\\/[imgyu]*G($RT)Y(L\`MDB1@T}
 Kr&#62;MrW[2])J\`86T,_=[];whilXW=/\\b3(break|catch|cQss|con3st|tZue)|qfault
 |do|else|fZally|for|from|function|if|import|Vt|static|super|switch|Sis|
-try|var|whiV|wiS|(case|qVte|export|extends|Z3stanceof)?|return|of|Srow|
-typeof|void|yieldT|(\\d+3\\.\\d*)?3[eE][-+]?\\d+)?|0x[\\da-fA-F]+|0o[0-
-7]+|0b[01]+|true|false|null|unqfZed|NaN|InfZityT\\b|(([&#34;&#39;])3\\\\[^]|.)*
-?\\5)|([.](?![.]     [.])|[)\\]}])|(\\.\\.\\.|[(   [{;,?:         ]|=&#62;)
-|(--|[+][+]|Y|[|     ][|]|3&#60;&#60;|&#62;&#62;&#62;?|[-+\\/*%&#38;|^&#60;&#62;   ])=?    |~|[!=    ]=
-?=?)|([$\\w]+?(?     =\\s*[(]T|(\`G($RT)YW[7-1]!   =&#39;}     &#39;||a!=    1T
-B10]Y!((d,m,kz{L     &#39;Ks&#62;&#39;;whilX(12,m=/\\\\.|(\`   )|(    \\MGRTY(!B1]|
+try|var|whiV|wiS|(case|qVte|export|extends|Z3stanceof)?|new|of|return|S
+row|typeof|void|yieldT|(\\d+3\\.\\d*)?3[eE][-+]?\\d+)?|0x[\\da-fA-F]+|0
+o[0-7]+|0b[01]+|true|false|null|unqfZed|NaN|InfZityT\\b|(([&#34;&#39;])3\\\\[^]
+|.)*?\\5)|([.](?     ![.][.])|[)\\]}])|(\\.\\.\\   .|[([{         ;,?:]
+|=&#62;)|(--|[+][+]|     Y|[|][|]|3&#60;&#60;|&#62;&#62;&#62;?|[-+\\/*%&#38;   |^&#60;&#62;    ])=?|~    |[
+!=]=?=?)|([$\\w]     +?(?=\\s*[(]T|(\`G($RT)YW[7   -1]     !=&#39;}&#39;|    |a
+!=1TB10]Y!((d,m,     kz{L&#39;Ks&#62;&#39;;whilXW=/\\\\.|(\`   )|(    \\MGRTY(!B1]|
 |!d++TLDm.ZqxT8m     .Zqx+6),LB2]?\`Kp&#62;\\M&#60;/span   &#62;Ki    &#62;Mk=hR,0,1),U
 k[1],k[0]JKp&#62;J\`             :rW[0]);L\`Mm?Dk=m.   Zqx+6)         8kT:r
 R,U&#39;&#39;)J\`})(0)||             (Us.sliPm.Zqx+6),LB   1]Y_[0         ]==&#39;.
@@ -38,8 +38,7 @@ rW[2])J\`86T;return(aYm?[t+Dm.ZqxT,s.sliPm.Zqx+6)]:t+rRT})z)=&#62;qdeZinY&#38;&#
 Xe(W(mVleUs=T))SthR(sQlaPcXM\${Lt+=K&#60;span\\x20cQsUJ}&#60;/span&#62;H\\\\.|.)G)/
 .execDrR.sliP0,Bm[@].VngS8,Us.sliP6B0@3(?:`</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>&#39;&#39;</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>of</span><span class=s>
 `368@BDGHJKLMPQRSTUVWXYZqz`</span><span class=p>)</span><span class=k>with</span><span class=p>(</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>c<span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=f>join</span><span class=p>(</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>//</span>
-<span class=c>/* (C)2015 TSUYUSATO Kitsune */</span>
-</code></pre>
+<span class=c>/* (C) 2015 TSUYUSATO Kitsune */</span></code></pre>
     </header>
     <main>
         <h1><a href="https://github.com/MakeNowJust/h.js">h.js</a></h1>
