--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
 
 <body>
     <header>
-        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>)</span><span class=p>=&#62;</span><span class=p>{</span>s<span class=o>=</span><span class=s>`((r,fz{typeof(qfZe)==&#39;function&#39;YqfZe.amd?qfZX[],f):typeofWo
-duV)==&#39;object&#39;YmoduV.exports?WoduV.exportUf(T:(r.h=f(T})(Function(&#39;retu
-rn(Sis)&#39;)(),(hzh=R,m,a,r,t,$,_z{r=Rzs.repQP/[&#38;&#60;&#62;&#34;&#39;]/g,U&#62;\`&#38;#Ms.charCoqA
-t(0)};\`),$=(e,bz(b=e.repQP/^(\\s*)([/][/].*|[/][*][^]*?[*][/])/,(_,w,c
-z(Lr(w)+&#39;Kc&#62;&#39;+r(c).repQP/\\x40\\w+/g,U&#62;\`Kd&#62;MsJ\`)+&#39;&#60;/span&#62;&#39;,&#39;&#39;T)==e?(U
-b):$(b),t=&#39;&#39;,W=/^(\\s*)(\\/(\\[(H*?\\]|H+?\\/[imgyu]*G($RT)Y(L\`MDB1@T}
-Kr&#62;MrW[2])J\`86T,_=[];whilXW=/\\b3(break|catch|cQss|con3st|tZue)|qfault
-|do|else|fZally|for|from|function|if|import|Vt|static|super|switch|Sis|
-try|var|whiV|wiS|(case|qVte|export|extends|Z3stanceof)?|new|of|return|S
-row|typeof|void|yieldT|(\\d+3\\.\\d*)?3[eE][-+]?\\d+)?|0x[\\da-fA-F]+|0
-o[0-7]+|0b[01]+|true|false|null|unqfZed|NaN|InfZityT\\b|(([&#34;&#39;])3\\\\[^]
-|.)*?\\5)|([.](?     ![.][.])|[)\\]}])|(\\.\\.\\   .|[([{         ;,?:]
-|=&#62;)|(--|[+][+]|     Y|[|][|]|3&#60;&#60;|&#62;&#62;&#62;?|[-+\\/*%&#38;   |^&#60;&#62;    ])=?|~    |[
-!=]=?=?)|([$\\w]     +?(?=\\s*[(]T|(\`G($RT)YW[7   -1]     !=&#39;}&#39;|    |a
-!=1TB10]Y!((d,m,     kz{L&#39;Ks&#62;&#39;;whilXW=/\\\\.|(\`   )|(    \\MGRTY(!B1]|
-|!d++TLDm.ZqxT8m     .Zqx+6),LB2]?\`Kp&#62;\\M&#60;/span   &#62;Ki    &#62;Mk=hR,0,1),U
-k[1],k[0]JKp&#62;J\`             :rW[0]);L\`Mm?Dk=m.   Zqx+6)         8kT:r
-R,U&#39;&#39;)J\`})(0)||             (Us.sliPm.Zqx+6),LB   1]Y_[0         ]==&#39;.
-&#39;Y(/^\\s*\\(/.te     stR)?   W[9]=B0],    B1]=B2   ]=&#39;&#39;):true)||B    1]
-!==&#39;qfault&#39;Y/^\\     s*:/.   testR)?rW    .Zput.   sliP0,m.Zqx+6)    ,1
-):\`MrW.Zput.sli     P0,m.   Zqx   T}K    M&#39;_k_v   s_p    pof&#39;[m     .Z
-qxOfW[0],1)]}&#62;Mr     W[0])   J\`   ),_             =m,    (aYW[7    -1]
-==&#39;}&#39;Ya--||B7]==     &#39;{&#39;Ya   ++T   ,W[             7+1]||         B7]||
-B2])YW=/^(\\s*)(\\/([\\[](H*?[\\]]|H+?\\/[imgyu]*G($RT)Y(L\`MDB1@T}Kr&#62;M
-rW[2])J\`86T;return(aYm?[t+Dm.ZqxT,s.sliPm.Zqx+6)]:t+rRT})z)=&#62;qdeZinY&#38;&#38;
-Xe(W(mVleUs=T))SthR(sQlaPcXM\${Lt+=K&#60;span\\x20cQsUJ}&#60;/span&#62;H\\\\.|.)G)/
-.execDrR.sliP0,Bm[@].VngS8,Us.sliP6B0@3(?:`</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>&#39;&#39;</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>of</span><span class=s>
-`368@BDGHJKLMPQRSTUVWXYZqz`</span><span class=p>)</span><span class=k>with</span><span class=p>(</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>c<span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=f>join</span><span class=p>(</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>//</span>
+        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>,</span>p<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.amd?Y([],fUZToduS)=Wob
+ject'VmoduS.exports?ToduS.exportRf()U(Function('Q(this)'P).h=f(M}(LhqQ(
+h=Ls,f,t,e,c,r,m,l,pqtW';p=[];e=LtqQ(tK[&#60;&#38;]/g,LcqQ'&#38;#'+c.charCodeAt()J;
+'}M};c=L_qQ(_=sK^(HP\/(\/.*|[*G^]*?[*]\/M/,L_,w,mqDw<span class=d>@c9</span>+eT)K\100\w+/g,L
+dqQ8Rd9+d69})69;Q''}M==s?(R_Uc(R_)};(r=L_qQ(Rc5)K^(HP[/](\[(\\.|.)*?\4\
+\.|.)+?[/Gimguy]*)/,L_,w,mqDw<span class=d>@r9</span>+m69;Q''}M}P);whiS(T=/^([^]*?P\b(break|
+catch|3s|con(?:st|tinue)|default|do|else|finally|for|from|z|if|import|S
+t|static|super|switch|this|try|var|whiS|with|(case|deSte|export|extends
+|in(?:stanceof)?|new|of|Q|throw|Z|void|yieldM\b|(\b(?:0[xXGa-fA-F\d]+|t
+rue|false|null|unYd|NaN|Infinity)\b|(?:\.\d+|\b(?:0[oObB])?\d+(?:\.\d*)
+?P?:[eEG-+]?\d+)?)|(("|'P?:\\[^4.)*?\7)|([.G.G.4[([{;,?:4=>)|([.)\]}])|
+(--|[+G+4V|[|G|4     (?:&#60;&#60;|>>>?|[-+\/*%&#38;|^&#60;>])=?   |~|[!=         ]=?=?
+)|([$\w]+(?=H[(`     ]M|(`)|(.(?=[/G*\/]M)/.exec   (c5M    )VT[10    -1
+]!W}'||f!=1MRs.s     liceT[0].Sngth),m[12]?!(Lnq   DeT     [1])<span class=d>@s</span>    >`
+';whiS((n=/^([^]     *?P\\.|(`)|(\${M/.exec5MV!n   [1+    2])Rs.slice(n
+[0].Sngth),De(n[     1])+(n[2+2]?8Rp>\${&#60;/span>&#60;   spa    n\x203Ri9+(l=
+h5,1),Z(l)9r'?5W             ',l69U(Rl[1],l[0]6>   &#60;span\         x203R
+p>}&#60;/span9)Ue(n[             2]M;D(n?e(n[0],Rs.s   lice(n         [0].S
+ngth)Ue5,sW'M69}     PU(De   T[1])+T[1    2+14|m   [1+2]V(p[2]=W.    'V
+/^H$/.testT[1])V     (/^H[   (`]/.test    5)?T[1   1]=m[2],m[1+2]    =m
+[2+2]W'Utrue)||/     ^H:/.   tes   t5M    ?eT[2]   U8s    WJ___k     _v
+s_ppof'[m.indexO     fT[2]   ,2+   1)]             J9+    eT[2])    69)
+,p=m),(fVT[10-1]     =W}'V   f--   ||m             [10-2]         =W{'V
+f++M,T[2+24|m[10-24|m[10])Vr();QT?[t+eT[1]),s.sliceT[0].Sngth)]:t+e5M})
+})zfunctionq){ZtypeofYdefineW='V&#38;&#38;U):T(mSleRs=QreturnP)(M))Lz(K.replace
+(/J+'H\s*G][Dt+=<span class=d>@J</span>&#60;span\x203R9>'8'&#60;span\x2036J&#60;/span5(s4]|3clas*/</span><span class=p>}</span><span class=o>+</span><span class=s>''</span><span class=p>)</span><span class=p>.</span>
+<span class=f>match</span><span class=p>(</span><span class=r>/[/][*]([^]*?)[*][/]/</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span><span class=s>"345689@"</span>
+<span class=o>+</span><span class=s>"DGHJKLMPQRSTUVWYZqz"</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>//</span>
 <span class=c>/* (C) 2015 TSUYUSATO Kitsune */</span></code></pre>
     </header>
     <main>
@@ -65,12 +65,12 @@ Xe(W(mVleUs=T))SthR(sQlaPcXM\${Lt+=K&#60;span\\x20cQsUJ}&#60;/span&#62;H\\\\.|.)
         <p>or download <a href="https://raw.githubusercontent.com/MakeNowJust/h.js/master/h.js">h.js</a> directly.</p>
         <h2>Usage</h2>
         <p>In Node.js, you can use <code>require</code>:</p>
-        <pre><code class="h-js language-javascript"><span class=k>const</span> h <span class=o>=</span> <span class=f>require</span><span class=p>(</span><span class=s>&#39;h.js&#39;</span><span class=p>)</span>
-console<span class=p>.</span><span class=f>log</span><span class=p>(</span><span class=f>h</span><span class=p>(</span><span class=s>&#39;1 + 2&#39;</span><span class=p>)</span><span class=p>)</span>
-<span class=c>//=&#62; &#39;&#60;span class=v&#62;1&#60;/span&#62; &#60;span class=o&#62;+&#60;/span&#62; &#60;span class=v&#62;2&#60;/span&#62;&#39;</span></code></pre>
+        <pre><code class="h-js language-javascript"><span class=k>const</span> h <span class=o>=</span> <span class=f>require</span><span class=p>(</span><span class=s>'h.js'</span><span class=p>)</span>
+console<span class=p>.</span><span class=f>log</span><span class=p>(</span><span class=f>h</span><span class=p>(</span><span class=s>'1 + 2'</span><span class=p>)</span><span class=p>)</span>
+<span class=c>//=> '&#60;span class=v>1&#60;/span> &#60;span class=o>+&#60;/span> &#60;span class=v>2&#60;/span>'</span></code></pre>
         <p>In Browser, you add <code>&lt;script&gt;</code> tag to load h.js and put this script into the tail of <code>&lt;body&gt;</code>:</p>
-        <pre><code class="h-js language-javascript">Array<span class=p>.</span><span class=f>from</span><span class=p>(</span>document<span class=p>.</span><span class=f>querySelectorAll</span><span class=p>(</span><span class=s>&#39;pre code.h-js&#39;</span><span class=p>)</span><span class=p>)</span>
-  <span class=p>.</span><span class=f>forEach</span><span class=p>(</span><span class=p>(</span>code<span class=p>)</span> <span class=p>=&#62;</span> <span class=p>{</span>
+        <pre><code class="h-js language-javascript">Array<span class=p>.</span><span class=f>from</span><span class=p>(</span>document<span class=p>.</span><span class=f>querySelectorAll</span><span class=p>(</span><span class=s>'pre code.h-js'</span><span class=p>)</span><span class=p>)</span>
+  <span class=p>.</span><span class=f>forEach</span><span class=p>(</span><span class=p>(</span>code<span class=p>)</span> <span class=p>=></span> <span class=p>{</span>
     code<span class=p>.</span>innerHTML <span class=o>=</span> <span class=f>h</span><span class=p>(</span>code<span class=p>.</span>textContent<span class=p>)</span>
   <span class=p>}</span><span class=p>)</span></code></pre>
         <h2>API</h2>
