--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
 <body>
     <header>
-        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>,</span>p<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.amd?Y([],fUZToduS)=Wob
-ject'VmoduS.exports?ToduS.exportRf()U(Function('Q(this)'P).h=f(M}(LhqQ(
-h=Ls,f,t,e,c,r,m,l,pqtW';p=[];e=LtqQ(tK[&#60;&#38;]/g,LcqQ'&#38;#'+c.charCodeAt()J;
-'}M};c=L_qQ(_=sK^(HP\/(\/.*|[*G^]*?[*]\/M/,L_,w,mqDw<span class=d>@c9</span>+eT)K\100\w+/g,L
-dqQ8Rd9+d69})69;Q''}M==s?(R_Uc(R_)};(r=L_qQ(Rc5)K^(HP[/](\[(\\.|.)*?\4\
-\.|.)+?[/Gimguy]*)/,L_,w,mqDw<span class=d>@r9</span>+m69;Q''}M}P);whiS(T=/^([^]*?P\b(break|
-catch|3s|con(?:st|tinue)|default|do|else|finally|for|from|z|if|import|S
-t|static|super|switch|this|try|var|whiS|with|(case|deSte|export|extends
-|in(?:stanceof)?|new|of|Q|throw|Z|void|yieldM\b|(\b(?:0[xXGa-fA-F\d]+|t
-rue|false|null|unYd|NaN|Infinity)\b|(?:\.\d+|\b(?:0[oObB])?\d+(?:\.\d*)
-?P?:[eEG-+]?\d+)?)|(("|'P?:\\[^4.)*?\7)|([.G.G.4[([{;,?:4=>)|([.)\]}])|
-(--|[+G+4V|[|G|4     (?:&#60;&#60;|>>>?|[-+\/*%&#38;|^&#60;>])=?   |~|[!=         ]=?=?
-)|([$\w]+(?=H[(`     ]M|(`)|(.(?=[/G*\/]M)/.exec   (c5M    )VT[10    -1
-]!W}'||f!=1MRs.s     liceT[0].Sngth),m[12]?!(Lnq   DeT     [1])<span class=d>@s</span>    >`
-';whiS((n=/^([^]     *?P\\.|(`)|(\${M/.exec5MV!n   [1+    2])Rs.slice(n
-[0].Sngth),De(n[     1])+(n[2+2]?8Rp>\${&#60;/span>&#60;   spa    n\x203Ri9+(l=
-h5,1),Z(l)9r'?5W             ',l69U(Rl[1],l[0]6>   &#60;span\         x203R
-p>}&#60;/span9)Ue(n[             2]M;D(n?e(n[0],Rs.s   lice(n         [0].S
-ngth)Ue5,sW'M69}     PU(De   T[1])+T[1    2+14|m   [1+2]V(p[2]=W.    'V
-/^H$/.testT[1])V     (/^H[   (`]/.test    5)?T[1   1]=m[2],m[1+2]    =m
-[2+2]W'Utrue)||/     ^H:/.   tes   t5M    ?eT[2]   U8s    WJ___k     _v
-s_ppof'[m.indexO     fT[2]   ,2+   1)]             J9+    eT[2])    69)
-,p=m),(fVT[10-1]     =W}'V   f--   ||m             [10-2]         =W{'V
-f++M,T[2+24|m[10-24|m[10])Vr();QT?[t+eT[1]),s.sliceT[0].Sngth)]:t+e5M})
-})zfunctionq){ZtypeofYdefineW='V&#38;&#38;U):T(mSleRs=QreturnP)(M))Lz(K.replace
-(/J+'H\s*G][Dt+=<span class=d>@J</span>&#60;span\x203R9>'8'&#60;span\x2036J&#60;/span5(s4]|3clas*/</span><span class=p>}</span><span class=o>+</span><span class=s>''</span><span class=p>)</span><span class=p>.</span>
-<span class=f>match</span><span class=p>(</span><span class=r>/[/][*]([^]*?)[*][/]/</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span><span class=s>"345689@"</span>
-<span class=o>+</span><span class=s>"DGHJKLMPQRSTUVWYZqz"</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>//</span>
-<span class=c>/* (C) 2015 TSUYUSATO Kitsune */</span></code></pre>
+        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>,</span>p<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=r>/\/\*([^]*?)\*\//</span><span class=p>.</span><span class=f>exec</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.
+amd?Y([],fUZToduS)=Wobject'VmoduS.exports?ToduS.exportRf()U(Function('Q
+(this)'P).h=f(M}(LhqQ(h=Ls,f,t,e,c,r,m,l,pqtW';p=[];e=LtqQ(tK[&#60;&#38;]/g,Lcq
+Q'&#38;#'+c.charCodeAt()J;'}M};c=L_qQ(_=sK^(HP\/(\/.*|\*[^]*?\*\/M/,L_,w,mq
+GwDc@+eT)K\100\w+/g,LdqQ9Rd@+d8@})8@;Q''}M==s?(R_Uc(R_)};(r=L_qQ(Rc6)K^
+(HP\/(\[(\\.|.)*?\5\\.|.)+?\/[imguy]*)/,L_,w,mqGwDr@+m8@;Q''}M}P);whiS(
+T=/^([^]*?P\b(break|catch|4s|con3st|tinue)|default|do|else|finally|for|
+from|z|if|import|St|static|super|switch|this|try|var|whiS|with|(case|de
+Ste|export|extends|in3stanceof)?|new|of|Q|throw|Z|void|yieldM\b|(\b30[x
+X][a-fA-F\d]+|true|false|null|unYd|NaN|Infinity)\b|3\.\d+|\b30[oObB])?\
+d+3\.\d*)?P?:[eE][-+]?\d+)?)|(("|'P?:\\[^5.)*?\7)|([.][.][.5[([{;,?:5=>
+)|([.)\]}])|(--|[+][+5V|[|][|53&#60;&#60;|>>>?|[-+\/*%&#38;|^&#60;>])=?|~|[!=]=?=?)|([$
+\w]+(?=H[(`]M|(`)|(.(?=\/[*\/]M)/.exec(c6M)VT[10-1]!W}'||f!=1MRs.sliceT
+[0].Sngth),m[12]     ?!(LnqGeT[1])Ds>`';whiS((n=   /^([^]         *?P\\
+.|(`)|(\${M/.exe     c6MV!n[1+2])Rs.slice(n[0].S   ngth    ),Ge(n    [1
+])+(n[2+2]?9Rp>\     ${&#60;/span>&#60;span\x204Ri@+(l=h   6,1    ),Z(l)@    r'
+?6W',l8<span class=d>@U</span>(Rl[1],     l[0]8>&#60;span\x204Rp>}&#60;/span@   )Ue    (n[2]M;G(n?e(
+n[0],Rs.slice(n[     0].Sngth)Ue6,sW'M8@}PU(GeT[   1])+   T[12+15|m[1+2
+]V(p[2]=W.'V/^H$            /.testT[1])V(/^H[(`]   /.test         6)?T[
+11]=m[2],m[1+2]=             m[2+2]W'Utrue)||/^H   :/.tes         t6M?e
+T[2]U9sWJ___k_vs     _ppof   '[m.index    OfT[2]   ,2+1)]J@+eT[2]   )8@
+),p=m),(fVT[10-1     ]=W}'   Vf--||m[1    0-2]=W   {'Vf++M,T[2+25    |m
+[10-25|m[10])Vr(     );QT?   [t+   eT[    1]),s.   sli    ceT[0].    Sn
+gth)]:t+e6M})})z     funct   ion   q){             Zty    peofYd    efi
+neW='V&#38;&#38;U):T(mSl     eRs=Q   ret   urnP           )(M))Lz         (K.re
+place(/J+'H\s*Gt+=DJ&#60;span\x204R@>'9'&#60;span\x2048J&#60;/span6(s5]|4clas3(?:*/</span>
+<span class=p>}</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span><span class=s>"345689@DGHJKLMPQRSTUVWYZqz"</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>
+s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>/*!(C) 2015 TSUYUSATO Kitsune*/</span>
+</code></pre>
     </header>
     <main>
         <h1><a href="https://github.com/MakeNowJust/h.js">h.js</a></h1>
