--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset='utf-8'>
     <title>h.js - 2KB JavaScript Syntax Highlighter</title>
     <meta property="og:title" content="h.js - 2KB JavaScript Syntax Highlighter" />
@@ -16,33 +17,33 @@
 <body>
     <header>
         <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>,</span>p<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=r>/\/\*([^]*?)\*\//</span><span class=p>.</span><span class=f>exec</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.
-amd?Y([],fUZToduS)=Wobject'VmoduS.exports?ToduS.exportRf()U(Function('Q
-(this)'P).h=f(M}(LhqQ(h=Ls,f,t,e,c,r,m,l,pqtW';p=[];e=LtqQ(tK[&#60;&#38;]/g,Lcq
-Q'&#38;#'+c.charCodeAt()J;'}M};c=L_qQ(_=sK^(HP\/(\/.*|\*[^]*?\*\/M/,L_,w,mq
-GwDc@+eT)K\100\w+/g,LdqQ9Rd@+d8@})8@;Q''}M==s?(R_Uc(R_)};(r=L_qQ(Rc6)K^
-(HP\/(\[(\\.|.)*?\5\\.|.)+?\/[imguy]*)/,L_,w,mqGwDr@+m8@;Q''}M}P);whiS(
-T=/^([^]*?P\b(break|catch|4s|con3st|tinue)|default|do|else|finally|for|
-from|z|if|import|St|static|super|switch|this|try|var|whiS|with|(case|de
-Ste|export|extends|in3stanceof)?|new|of|Q|throw|Z|void|yieldM\b|(\b30[x
-X][a-fA-F\d]+|true|false|null|unYd|NaN|Infinity)\b|3\.\d+|\b30[oObB])?\
-d+3\.\d*)?P?:[eE][-+]?\d+)?)|(("|'P?:\\[^5.)*?\7)|([.][.][.5[([{;,?:5=>
-)|([.)\]}])|(--|[+][+5V|[|][|53&#60;&#60;|>>>?|[-+\/*%&#38;|^&#60;>])=?|~|[!=]=?=?)|([$
-\w]+(?=H[(`]M|(`)|(.(?=\/[*\/]M)/.exec(c6M)VT[10-1]!W}'||f!=1MRs.sliceT
-[0].Sngth),m[12]     ?!(LnqGeT[1])Ds>`';whiS((n=   /^([^]         *?P\\
-.|(`)|(\${M/.exe     c6MV!n[1+2])Rs.slice(n[0].S   ngth    ),Ge(n    [1
-])+(n[2+2]?9Rp>\     ${&#60;/span>&#60;span\x204Ri@+(l=h   6,1    ),Z(l)@    r'
-?6W',l8<span class=d>@U</span>(Rl[1],     l[0]8>&#60;span\x204Rp>}&#60;/span@   )Ue    (n[2]M;G(n?e(
-n[0],Rs.slice(n[     0].Sngth)Ue6,sW'M8@}PU(GeT[   1])+   T[12+15|m[1+2
-]V(p[2]=W.'V/^H$            /.testT[1])V(/^H[(`]   /.test         6)?T[
-11]=m[2],m[1+2]=             m[2+2]W'Utrue)||/^H   :/.tes         t6M?e
-T[2]U9sWJ___k_vs     _ppof   '[m.index    OfT[2]   ,2+1)]J@+eT[2]   )8@
-),p=m),(fVT[10-1     ]=W}'   Vf--||m[1    0-2]=W   {'Vf++M,T[2+25    |m
-[10-25|m[10])Vr(     );QT?   [t+   eT[    1]),s.   sli    ceT[0].    Sn
-gth)]:t+e6M})})z     funct   ion   q){             Zty    peofYd    efi
-neW='V&#38;&#38;U):T(mSl     eRs=Q   ret   urnP           )(M))Lz         (K.re
-place(/J+'H\s*Gt+=DJ&#60;span\x204R@>'9'&#60;span\x2048J&#60;/span6(s5]|4clas3(?:*/</span>
-<span class=p>}</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span><span class=s>"345689@DGHJKLMPQRSTUVWYZqz"</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>
-s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>/*!(C) 2015 TSUYUSATO Kitsune*/</span>
+amd?Y([],f):ZUoduT)=Wobject'VmoduT.exports?UoduT.exportSf(R:(Function('
+Q(this)')().h=f(R}(z(hqQ(h=z(s,f,t,e,c,r,m,l,pqtW';p=[];e=z(tqQ(tP[&#60;&#38;]/
+g,z(cqQ'&#38;#'+c.charCodeAt()M;'}R};c=z(_qQ(_=sP^Ls*)L/L/.*|\*([^]*?\*\/|[
+^]*R)/,z(_,w,mqt+=wKcJ+eU)P\100\w+/g,z(dqQHSdJ+dGJ})GJ;Q''}R==s?(S_):c(
+S_)};(r=z(_qQ(Sc(s)P^Ls*)L/[^*](L[L\.|.)*?\]|\\.|.)+?\/[imguy]*|.*R/,z(
+_,w,mqt+=wKrJ+mGJ;Q''}R})();whiT(U=/^([^]*?)Lb(break|catch|Ds|con<span class=d>@st</span>|ti
+nue)|default|do|else|finally|for|from|z|if|import|Tt|static|super|switc
+h|this|try|var|whiT|with|(case|deTte|export|extends|in<span class=d>@stanceof</span>)?|new|o
+f|Q|throw|Z|void|yieldR\b|Lb<span class=d>@0</span>[xX][a-fA-F\d]+|true|false|null|unYd|NaN|
+Infinity)\b|@\.\d+|\b<span class=d>@0</span>[oObB9?\d+@\.\d*)?)@[eE][-+]?\d+)?)|(Lx22|')@@\\
+[^]|.)*?\7|.*R|([.][.][.]|[L[{;,?:]|=>)|([.)\]}9|(--|[+][+]|V|[|][|]|@&#60;
+&#60;|>>>?|[-+\/*%&#38;|^&#60;>9=?|~|[!=]=?=?)|([$\w]+(?=\s*[(`]R|(`)|(.(?=\/[*\/]R
+)/.exec(c(sR)V81     0-1]!W}'||f!=1RS685),m[12]?   !(z(nq         t+=e8
+19Ks>`';whiT((n=     /^([^]*?)L\.|(`)|L${R/.exec   (sRV    !n[1+2    9S
+6(n[5),t+=e(n[19     +(n[2+2]?HSp>\${&#60;/4>3SiJ+(l   =h(    s,1),Z(    l)
+Jr'?(sW',lGJ):(S     l[1],l[0]G>3Sp>}&#60;/4JR:e(n[2   ]R;    t+=(n?e(n[0],
+S6(n[5R:e(s,sW'R     GJ})():(t+=e819+812+1]||m[1   +2]V   (p[2]=W.'V/^\
+s*$/.test819V(/^            \s*[(`]/.test(s,m[1+   2]=m[2         +2]W'
+)?!811]=m[29:1)|             |/^\s*:/.test(sR?e8   29:HsW         M___k
+_vs_ppof'[m.inde     xOf82   ],2+1)]MJ    +e829G   J),p=m),(fV810   -1]
+=W}'Vf--||m[7+1]     =W{'V   f++R,82+2    ]||m[7   +1]||m[109Vr()    ;Q
+U?[t+e819,685)]:     t+e(s   R})   })z    functi   onq    ){Ztype    of
+YdefineW='V&#38;&#38;U(m     TleSs   =R)   )Qr             etu    rnP.re    pla
+ce(/M+'L(\KM3SJ>     'H'3G   M&#60;/   4Dcl           as@(?:9         ])8U[
+6s.slice50].Tngth4span3&#60;4\x20D*/</span><span class=p>}</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span>c<span class=c>/***/</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span>
+<span class=s>'345689@DGHJKLMPQRSTUVWYZqz'</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span>
+<span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>// (C) 2015 TSUYUSATO Kitsune</span>
 </code></pre>
     </header>
     <main>
