Another minor typo :P

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ console<span class=p>.</span><span class=f>log</span><span class=p>(</span><span
         <p>It returns HTML text which contains <code>&lt;span&gt;</code> element having such a class:</p>
         <ul>
             <li><code>&lt;span class=c&gt;...&lt;/span&gt;</code> means the comment.</li>
-            <li><code>&lt;span class=d&gt;...&lt;/span&gt;</code> means the JSDoc tag (it appearss in comment.)</li>
+            <li><code>&lt;span class=d&gt;...&lt;/span&gt;</code> means the JSDoc tag (it appears in comment.)</li>
             <li><code>&lt;span class=k&gt;...&lt;/span&gt;</code> means the keyword.</li>
             <li><code>&lt;span class=v&gt;...&lt;/span&gt;</code> means the value (number, boolean and some constants.)</li>
             <li><code>&lt;span class=s&gt;...&lt;/span&gt;</code> means the string (includes template string.)</li>
