--- a/index.html
+++ b/index.html
@@ -10,40 +10,41 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://h.js.org/" />
     <meta property="og:image" content="http://h.js.org/img/h.js.png" />
-    <meta property="og:description" content="Feature - Only 2.0KB (or 1.3KB if gzipepd) - Of course, self contained - Written in ES2015 - Exact highlighting - Support ES2015 syntax - Support JSDoc tag highlighting - Support UMD" />
+    <meta property="og:description" content="Feature - Only 2.0KB (or 1.3KB if gzipepd) - Of course, self contained - Exact highlighting - Support ES2015, ES2016 and ES2017 syntax - Support JSDoc tag highlighting - Support UMD" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>c<span class=p>,</span>s<span class=p>,</span>p<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=r>/\/\*([^]*?)\*\//</span><span class=p>.</span><span class=f>exec</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.
+        <pre><code class="h-js language-javascript"><span class=p>(</span><span class=k>function</span><span class=p>(</span>p<span class=p>,</span>c<span class=p>,</span>s<span class=p>)</span><span class=p>{</span>s<span class=o>=</span><span class=r>/\/\*([^]*?)\*\//</span><span class=p>.</span><span class=f>exec</span><span class=p>(</span><span class=k>function</span><span class=p>(</span><span class=p>)</span><span class=p>{</span><span class=c>/*!z(fqZ(Y)=Wz'VY.
 amd?Y([],f):ZUoduT)=Wobject'VmoduT.exports?UoduT.exportSf(R:(Function('
 Q(this)')().h=f(R}(z(hqQ(h=z(s,f,t,e,c,r,m,l,pqtW';p=[];e=z(tqQ(tP[&#60;&#38;]/
 g,z(cqQ'&#38;#'+c.charCodeAt()M;'}R};c=z(_qQ(_=sP^Ls*)L/L/.*|\*([^]*?\*\/|[
 ^]*R)/,z(_,w,mqt+=wKcJ+eU)P\100\w+/g,z(dqQHSdJ+dGJ})GJ;Q''}R==s?(S_):c(
 S_)};(r=z(_qQ(Sc(s)P^Ls*)L/[^*](L[L\.|.)*?\]|\\.|.)+?\/[imguy]*|.*R/,z(
-_,w,mqt+=wKrJ+mGJ;Q''}R})();whiT(U=/^([^]*?)Lb(break|catch|Ds|con<span class=d>@st</span>|ti
-nue)|default|do|else|finally|for|from|z|if|import|Tt|static|super|switc
-h|this|try|var|whiT|with|(case|deTte|export|extends|in<span class=d>@stanceof</span>)?|new|o
-f|Q|throw|Z|void|yieldR\b|Lb<span class=d>@0</span>[xX][a-fA-F\d]+|true|false|null|unYd|NaN|
-Infinity)\b|@\.\d+|\b<span class=d>@0</span>[oObB9?\d+@\.\d*)?)@[eE][-+]?\d+)?)|(Lx22|')@@\\
-[^]|.)*?\7|.*R|([.][.][.]|[L[{;,?:]|=>)|([.)\]}9|(--|[+][+]|V|[|][|]|@&#60;
-&#60;|>>>?|[-+\/*%&#38;|^&#60;>9=?|~|[!=]=?=?)|([$\w]+(?=\s*[(`]R|(`)|(.(?=\/[*\/]R
-)/.exec(c(sR)V81     0-1]!W}'||f!=1RS685),m[12]?   !(z(nq         t+=e8
-19Ks>`';whiT((n=     /^([^]*?)L\.|(`)|L${R/.exec   (sRV    !n[1+2    9S
-6(n[5),t+=e(n[19     +(n[2+2]?HSp>\${&#60;/4>3SiJ+(l   =h(    s,1),Z(    l)
-Jr'?(sW',lGJ):(S     l[1],l[0]G>3Sp>}&#60;/4JR:e(n[2   ]R;    t+=(n?e(n[0],
-S6(n[5R:e(s,sW'R     GJ})():(t+=e819+812+1]||m[1   +2]V   (p[2]=W.'V/^\
-s*$/.test819V(/^            \s*[(`]/.test(s,m[1+   2]=m[2         +2]W'
-)?!811]=m[29:1)|             |/^\s*:/.test(sR?e8   29:HsW         M___k
-_vs_ppof'[m.inde     xOf82   ],2+1)]MJ    +e829G   J),p=m),(fV810   -1]
-=W}'Vf--||m[7+1]     =W{'V   f++R,82+2    ]||m[7   +1]||m[109Vr()    ;Q
-U?[t+e819,685)]:     t+e(s   R})   })z    functi   onq    ){Ztype    of
-YdefineW='V&#38;&#38;U(m     TleSs   =R)   )Qr             etu    rnP.re    pla
-ce(/M+'L(\KM3SJ>     'H'3G   M&#60;/   4Dcl           as@(?:9         ])8U[
-6s.slice50].Tngth4span3&#60;4\x20D*/</span><span class=p>}</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span>c<span class=c>/***/</span><span class=k>in</span><span class=p>(</span>p<span class=o>=</span>
-<span class=s>'345689@DGHJKLMPQRSTUVWYZqz'</span><span class=p>)</span><span class=p>)</span>s<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span>
-<span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=p>)</span><span class=c>// (C) 2015 TSUYUSATO Kitsune</span>
+_,w,mqt+=wKrJ+mGJ;Q''}R})();whiT(U=/^([^]*?)Lb(asyncD=[@\t]*9z\b|9\w+|\
+(.*?\R[@\t]*=>R|break|catch|8s|con9st|tinue)|default|do|else|finally|fo
+r|from|z|if|import|Tt|static|super|switch|this|try|var|whiT|with|(await
+|case|deTte|export|extends|in9stanceof)?|new|of|Q|throw|Z|void|yieldR\b
+|Lb90[xX][a-fA-F\d]+|true|false|null|unYd|NaN|Infinity)\b|9\.\d+|\b90[o
+ObB6?\d+9\.\d*)?)9[eE][-+]?\d+)?)|(Lx22|')99\\[^]|.)*?\7|.*R|L.{3}|[L[{
+;,?:]|=>)|([.)\]}6|(--|[+][+]|V|[|][|]|9&#60;&#60;|>>>?|[-+\/%&#38;|^&#60;>]|\*\*?)=?|~
+|[!=]=?=?)|([$\w     ]+D=\s*[(`]R|(`)|(.D=\/[*\/   ]R)/.e         xec(c
+(sR)V510-1]!W}'|     |f!=1RS45"),m[12]?!(z(nqt+=   e516    Ks>`';    wh
+iT((n=/^([^]*?)L     \.|(`)|L${R/.exec(sRV!n[1+2   6S4    (n["),t    +=
+e(n[16+(n[2+2]?H     Sp>\${&#60;/span>&#60;span<span class=d>@8SiJ</span>+(l=   h(s    ,1),Z(l)Jr'?(
+sW',lGJ):(Sl[1],     l[0]G>&#60;span<span class=d>@8Sp</span>>}&#60;/spanJR:e   (n[2   ]R;t+=(n?e(n[
+0],S4(n["R:e(s,s            W'RGJ})():(t+=e516+5   12+1]|         |m[1+
+2]V(p[2]=W.'V/^\             s*$/.test516V(/^\s*   [(`]/.         test(
+s,m[1+2]=m[2+2]W     ')?!5   11]=m[26:    1)||/^   \s*:/.test(sR?   e52
+6:HsWM___k_vs_pp     of'[m   .indexOf5    2],2+1   )]MJ+e526GJ),p    =m
+),(fV510-1]=W}'V     f--||   m[7   +1]    =W{'Vf   ++R    ,52+2]|    |m
+[7+1]||m[106Vr()     ;QU?[   t+e   516             ,45    ")]:t+    e(s
+R})})zfunctionq)     {Ztyp   eof   Ydef           ineW='V         &#38;&#38;U(m
+TleSs=R))QreturnP.replace(/M+'L(\KM&#60;span<span class=d>@8SJ</span>>'H'&#60;span<span class=d>@8GM</span>&#60;/spanD(?@\x20
+9D:8clas6])5U[4s.slice"0].Tngth*/</span><span class=p>}</span><span class=p>)</span><span class=p>[</span><span class=v>1</span><span class=p>]</span><span class=p>.</span><span class=f>replace</span><span class=p>(</span><span class=r>/\s/g</span><span class=p>,</span><span class=s>''</span><span class=p>)</span><span class=p>;</span><span class=k>for</span><span class=p>(</span><span class=p>(</span>c<span class=p>)</span><span class=k>in</span><span class=p>(</span>p<span class=p>)</span><span class=p>)</span>s
+<span class=o>=</span><span class=p>(</span>c<span class=o>=</span>s<span class=p>.</span><span class=f>split</span><span class=p>(</span>p<span class=p>[</span>c<span class=p>]</span><span class=p>)</span><span class=p>)</span><span class=p>.</span><span class=f>join</span><span class=p>(</span>c<span class=p>.</span><span class=f>pop</span><span class=p>(</span><span class=p>)</span><span class=p>)</span><span class=p>;</span><span class=f>eval</span><span class=p>(</span>s<span class=p>)</span><span class=p>}</span><span class=p>)</span><span class=p>(</span><span class=s>'"45689@DGHJKLMPQRSTUVWYZqz'</span>
+<span class=p>)</span><span class=c>// (C) 2016 TSUYUSATO Kitsune</span>
 </code></pre>
     </header>
     <main>
@@ -51,10 +52,11 @@ ce(/M+'L(\KM3SJ>     'H'3G   M&#60;/   4Dcl           as@(?:9         ])8U[
         <p><strong>2KB</strong> JavaScript Syntax Highlighter</p>
         <h2>Feature</h2>
         <ul>
-            <li>Only 2.0KB (or 1.3KB if gzipepd)</li>
+            <li>Only 2.0KB (or 1.4KB if gzipepd)</li>
             <li>Of cource, self contained</li>
             <li>Exact highlighting (Did you see mis-highlighted regexp or else?)</li>
             <li>Support <a href="http://www.ecma-international.org/ecma-262/6.0/">ES2015</a> syntax (template string, octal/binary number and some keywords...)</li>
+            <li>Support <a href="http://www.ecma-international.org/ecma-262/7.0/">ES2016</a> and ES2017 syntax (exponentiation operator and async/await)</li>
             <li>Support <a href="http://usejsdoc.org/">JSDoc</a> tag highlighting</li>
             <li>Support <a href="https://github.com/umdjs/umd">UMD</a> (<a href="https://en.wikipedia.org/wiki/CommonJS">CommonJS</a>, <a href="https://github.com/amdjs/amdjs-api/blob/master/AMD.md">AMD</a> and classic style loading)</li>
         </ul>
@@ -65,42 +67,45 @@ ce(/M+'L(\KM3SJ>     'H'3G   M&#60;/   4Dcl           as@(?:9         ])8U[
         <p>or download <a href="https://raw.githubusercontent.com/MakeNowJust/h.js/master/h.js">h.js</a> directly.</p>
         <h2>Usage</h2>
         <p>In Node.js, you can use <code>require</code>:</p>
-        <pre><code class="h-js language-javascript"><span class=k>const</span> h <span class=o>=</span> <span class=f>require</span><span class=p>(</span><span class=s>'h.js'</span><span class=p>)</span>
-console<span class=p>.</span><span class=f>log</span><span class=p>(</span><span class=f>h</span><span class=p>(</span><span class=s>'1 + 2'</span><span class=p>)</span><span class=p>)</span>
-<span class=c>//=> '&#60;span class=v>1&#60;/span> &#60;span class=o>+&#60;/span> &#60;span class=v>2&#60;/span>'</span></code></pre>
-        <p>In Browser, you add <code>&lt;script&gt;</code> tag to load h.js and put this script into the tail of <code>&lt;body&gt;</code>:</p>
-        <pre><code class="h-js language-javascript">Array<span class=p>.</span><span class=f>from</span><span class=p>(</span>document<span class=p>.</span><span class=f>querySelectorAll</span><span class=p>(</span><span class=s>'pre code.h-js'</span><span class=p>)</span><span class=p>)</span>
-  <span class=p>.</span><span class=f>forEach</span><span class=p>(</span><span class=p>(</span>code<span class=p>)</span> <span class=p>=></span> <span class=p>{</span>
-    code<span class=p>.</span>innerHTML <span class=o>=</span> <span class=f>h</span><span class=p>(</span>code<span class=p>.</span>textContent<span class=p>)</span>
-  <span class=p>}</span><span class=p>)</span></code></pre>
+        <pre><code class="language-javascript">const h = require('h.js')
+console.log(h('1 + 2'))
+//=> '&#x3C;span class=v>1&#x3C;/span> &#x3C;span class=o>+&#x3C;/span> &#x3C;span class=v>2&#x3C;/span>'
+</code></pre>
+        <p>In Browser, you add <code>&#x3C;script></code> tag to load h.js and put this script into the tail of <code>&#x3C;body></code>:</p>
+        <pre><code class="language-javascript">Array.from(document.querySelectorAll('pre code.h-js'))
+  .forEach((code) => {
+    code.innerHTML = h(code.textContent)
+  })
+</code></pre>
         <h2>API</h2>
-        <pre><code class="h-js language-javascript"><span class=c>/**
+        <pre><code class="language-javascript">/**
  * Highlight JavaScript source code.
  *
- * <span class=d>@param</span> {string} source - JavaScript source code.
- * <span class=d>@return</span> {string} - Highlighted source code.
- */</span>
-<span class=k>function</span> <span class=f>h</span> <span class=p>(</span>source<span class=p>)</span> <span class=p>{</span></code></pre>
-        <p>It returns HTML text which contains <code>&lt;span&gt;</code> element having such a class:</p>
+ * @param {string} source - JavaScript source code.
+ * @return {string} - Highlighted source code.
+ */
+function h (source) {
+</code></pre>
+        <p>It returns HTML text which contains <code>&#x3C;span></code> element having such a class:</p>
         <ul>
-            <li><code>&lt;span class=c&gt;...&lt;/span&gt;</code> means the comment.</li>
-            <li><code>&lt;span class=d&gt;...&lt;/span&gt;</code> means the JSDoc tag (it appearss in comment.)</li>
-            <li><code>&lt;span class=k&gt;...&lt;/span&gt;</code> means the keyword.</li>
-            <li><code>&lt;span class=v&gt;...&lt;/span&gt;</code> means the value (number, boolean and some constants.)</li>
-            <li><code>&lt;span class=s&gt;...&lt;/span&gt;</code> means the string (includes template string.)</li>
-            <li><code>&lt;span class=i&gt;...&lt;/span&gt;</code> means the interpolation (it appears in template string.)</li>
-            <li><code>&lt;span class=r&gt;...&lt;/span&gt;</code> means the regexp.</li>
-            <li><code>&lt;span class=o&gt;...&lt;/span&gt;</code> means the operator.</li>
-            <li><code>&lt;span class=p&gt;...&lt;/span&gt;</code> means the punctual symbol.</li>
-            <li><code>&lt;span class=f&gt;...&lt;/span&gt;</code> means the function name.</li>
+            <li><code>&#x3C;span class=c>...&#x3C;/span></code> means the comment.</li>
+            <li><code>&#x3C;span class=d>...&#x3C;/span></code> means the JSDoc tag (it appearss in comment.)</li>
+            <li><code>&#x3C;span class=k>...&#x3C;/span></code> means the keyword.</li>
+            <li><code>&#x3C;span class=v>...&#x3C;/span></code> means the value (number, boolean and some constants.)</li>
+            <li><code>&#x3C;span class=s>...&#x3C;/span></code> means the string (includes template string.)</li>
+            <li><code>&#x3C;span class=i>...&#x3C;/span></code> means the interpolation (it appears in template string.)</li>
+            <li><code>&#x3C;span class=r>...&#x3C;/span></code> means the regexp.</li>
+            <li><code>&#x3C;span class=o>...&#x3C;/span></code> means the operator.</li>
+            <li><code>&#x3C;span class=p>...&#x3C;/span></code> means the punctual symbol.</li>
+            <li><code>&#x3C;span class=f>...&#x3C;/span></code> means the function name.</li>
         </ul>
         <p>You can define styles of those classes in your CSS.</p>
         <h2>License</h2>
-        <p>MIT License <a href="http://makenowjust.mit-license.org/2015">http://makenowjust.mit-license.org/2015</a></p>
+        <p>MIT License <a href="https://makenowjust.mit-license.org/2015-2016">https://makenowjust.mit-license.org/2015-2016</a></p>
 
     </main>
     <footer>
-        <small>(C) 2015 TSUYUSATO Kitsune</small>
+        <small>(C) 2016 TSUYUSATO Kitsune</small>
     </footer>
 
     <script>
