--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function h (source) {
         <p>It returns HTML text which contains <code>&#x3C;span></code> element having such a class:</p>
         <ul>
             <li><code>&#x3C;span class=c>...&#x3C;/span></code> means the comment.</li>
-            <li><code>&#x3C;span class=d>...&#x3C;/span></code> means the JSDoc tag (it appearss in comment.)</li>
+            <li><code>&#x3C;span class=d>...&#x3C;/span></code> means the JSDoc tag (it appears in comment.)</li>
             <li><code>&#x3C;span class=k>...&#x3C;/span></code> means the keyword.</li>
             <li><code>&#x3C;span class=v>...&#x3C;/span></code> means the value (number, boolean and some constants.)</li>
             <li><code>&#x3C;span class=s>...&#x3C;/span></code> means the string (includes template string.)</li>
